zetasql/parser/testdata/pivot.test
# Simple PIVOT
# TODO: Remove no_show_parse_location_text after parse locations
# have been manually verified as correct.
[default no_show_parse_location_text]
SELECT * FROM t PIVOT(SUM(a) FOR b IN (0, 1));
--
QueryStatement [0-45]
  Query [0-45]
    Select [0-45]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-45]
        TablePathExpression [14-45]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-45]
            PivotExpressionList [22-28]
              PivotExpression [22-28]
                FunctionCall [22-28]
                  PathExpression [22-25]
                    Identifier(SUM) [22-25]
                  PathExpression [26-27]
                    Identifier(a) [26-27]
            PathExpression [33-34]
              Identifier(b) [33-34]
            PivotValueList [39-43]
              PivotValue [39-40]
                IntLiteral(0) [39-40]
              PivotValue [42-43]
                IntLiteral(1) [42-43]
--
SELECT
  *
FROM
  t PIVOT(SUM(a) FOR b IN (0, 1))
==

# Simple PIVOT with single-element IN-list
SELECT * FROM t PIVOT(SUM(a) FOR b IN (0));
--
QueryStatement [0-42]
  Query [0-42]
    Select [0-42]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-42]
        TablePathExpression [14-42]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-42]
            PivotExpressionList [22-28]
              PivotExpression [22-28]
                FunctionCall [22-28]
                  PathExpression [22-25]
                    Identifier(SUM) [22-25]
                  PathExpression [26-27]
                    Identifier(a) [26-27]
            PathExpression [33-34]
              Identifier(b) [33-34]
            PivotValueList [39-40]
              PivotValue [39-40]
                IntLiteral(0) [39-40]
--
SELECT
  *
FROM
  t PIVOT(SUM(a) FOR b IN (0))
==

# Multiple pivot exprs
SELECT * FROM t PIVOT(SUM(a), SUM(b) FOR b IN (0, 1));
--
QueryStatement [0-53]
  Query [0-53]
    Select [0-53]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-53]
        TablePathExpression [14-53]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-53]
            PivotExpressionList [22-36]
              PivotExpression [22-28]
                FunctionCall [22-28]
                  PathExpression [22-25]
                    Identifier(SUM) [22-25]
                  PathExpression [26-27]
                    Identifier(a) [26-27]
              PivotExpression [30-36]
                FunctionCall [30-36]
                  PathExpression [30-33]
                    Identifier(SUM) [30-33]
                  PathExpression [34-35]
                    Identifier(b) [34-35]
            PathExpression [41-42]
              Identifier(b) [41-42]
            PivotValueList [47-51]
              PivotValue [47-48]
                IntLiteral(0) [47-48]
              PivotValue [50-51]
                IntLiteral(1) [50-51]
--
SELECT
  *
FROM
  t PIVOT(SUM(a), SUM(b) FOR b IN (0, 1))
==

# Complex pivot exprs
SELECT * FROM t PIVOT(SUM(a) + SUM(b), COUNT(*), COUNT(DISTINCT c)
FOR b IN (0, 1));
--
QueryStatement [0-83]
  Query [0-83]
    Select [0-83]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-83]
        TablePathExpression [14-83]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-83]
            PivotExpressionList [22-66]
              PivotExpression [22-37]
                BinaryExpression(+) [22-37]
                  FunctionCall [22-28]
                    PathExpression [22-25]
                      Identifier(SUM) [22-25]
                    PathExpression [26-27]
                      Identifier(a) [26-27]
                  FunctionCall [31-37]
                    PathExpression [31-34]
                      Identifier(SUM) [31-34]
                    PathExpression [35-36]
                      Identifier(b) [35-36]
              PivotExpression [39-47]
                FunctionCall [39-47]
                  PathExpression [39-44]
                    Identifier(COUNT) [39-44]
                  Star(*) [45-46]
              PivotExpression [49-66]
                FunctionCall(distinct=true) [49-66]
                  PathExpression [49-54]
                    Identifier(COUNT) [49-54]
                  PathExpression [64-65]
                    Identifier(c) [64-65]
            PathExpression [71-72]
              Identifier(b) [71-72]
            PivotValueList [77-81]
              PivotValue [77-78]
                IntLiteral(0) [77-78]
              PivotValue [80-81]
                IntLiteral(1) [80-81]
--
SELECT
  *
FROM
  t PIVOT(SUM(a) + SUM(b), COUNT(*), COUNT(DISTINCT c) FOR b IN (0, 1))
==

# pivot expression with alias
# (mixed with another pivot expression without alias)
SELECT * FROM t PIVOT(SUM(a) AS sum_a, COUNT(b) FOR x IN (0, 1));
--
QueryStatement [0-64]
  Query [0-64]
    Select [0-64]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-64]
        TablePathExpression [14-64]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-64]
            PivotExpressionList [22-47]
              PivotExpression [22-37]
                FunctionCall [22-28]
                  PathExpression [22-25]
                    Identifier(SUM) [22-25]
                  PathExpression [26-27]
                    Identifier(a) [26-27]
                Alias [29-37]
                  Identifier(sum_a) [32-37]
              PivotExpression [39-47]
                FunctionCall [39-47]
                  PathExpression [39-44]
                    Identifier(COUNT) [39-44]
                  PathExpression [45-46]
                    Identifier(b) [45-46]
            PathExpression [52-53]
              Identifier(x) [52-53]
            PivotValueList [58-62]
              PivotValue [58-59]
                IntLiteral(0) [58-59]
              PivotValue [61-62]
                IntLiteral(1) [61-62]
--
SELECT
  *
FROM
  t PIVOT(SUM(a) AS sum_a, COUNT(b) FOR x IN (0, 1))
==

# pivot value with alias (mixed with another pivot value without alias)
SELECT * FROM t PIVOT(SUM(a) AS sum_a, COUNT(b) FOR x IN (0 AS zero, 1));
--
QueryStatement [0-72]
  Query [0-72]
    Select [0-72]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-72]
        TablePathExpression [14-72]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-72]
            PivotExpressionList [22-47]
              PivotExpression [22-37]
                FunctionCall [22-28]
                  PathExpression [22-25]
                    Identifier(SUM) [22-25]
                  PathExpression [26-27]
                    Identifier(a) [26-27]
                Alias [29-37]
                  Identifier(sum_a) [32-37]
              PivotExpression [39-47]
                FunctionCall [39-47]
                  PathExpression [39-44]
                    Identifier(COUNT) [39-44]
                  PathExpression [45-46]
                    Identifier(b) [45-46]
            PathExpression [52-53]
              Identifier(x) [52-53]
            PivotValueList [58-70]
              PivotValue [58-67]
                IntLiteral(0) [58-59]
                Alias [60-67]
                  Identifier(zero) [63-67]
              PivotValue [69-70]
                IntLiteral(1) [69-70]
--
SELECT
  *
FROM
  t PIVOT(SUM(a) AS sum_a, COUNT(b) FOR x IN (0 AS zero, 1))
==

# PIVOT on join input (comma join)
SELECT * FROM t1,t2 PIVOT(SUM(a) FOR b IN (0, 1));
--
QueryStatement [0-49]
  Query [0-49]
    Select [0-49]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-49]
        Join(COMMA) [16-49]
          TablePathExpression [14-16]
            PathExpression [14-16]
              Identifier(t1) [14-16]
          TablePathExpression [17-49]
            PathExpression [17-19]
              Identifier(t2) [17-19]
            PivotClause [20-49]
              PivotExpressionList [26-32]
                PivotExpression [26-32]
                  FunctionCall [26-32]
                    PathExpression [26-29]
                      Identifier(SUM) [26-29]
                    PathExpression [30-31]
                      Identifier(a) [30-31]
              PathExpression [37-38]
                Identifier(b) [37-38]
              PivotValueList [43-47]
                PivotValue [43-44]
                  IntLiteral(0) [43-44]
                PivotValue [46-47]
                  IntLiteral(1) [46-47]
--
SELECT
  *
FROM
  t1,
  t2 PIVOT(SUM(a) FOR b IN (0, 1))
==

# PIVOT on a parenthesized join is not supported.
# The proper way to PIVOT on a join result is to wrap the join result in a
# subquery.
SELECT * FROM (t1 INNER JOIN t2 USING(x)) PIVOT(SUM(a) FOR b IN (0, 1));
--
ERROR: Syntax error: Expected end of input but got keyword PIVOT [at 1:43]
SELECT * FROM (t1 INNER JOIN t2 USING(x)) PIVOT(SUM(a) FOR b IN (0, 1));
                                          ^
==

# PIVOT on join input (inner join)
SELECT * FROM t1 INNER JOIN t2 PIVOT(SUM(a) FOR b IN (0, 1)) USING(x);
--
QueryStatement [0-69]
  Query [0-69]
    Select [0-69]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-69]
        Join(INNER) [17-69]
          TablePathExpression [14-16]
            PathExpression [14-16]
              Identifier(t1) [14-16]
          TablePathExpression [28-60]
            PathExpression [28-30]
              Identifier(t2) [28-30]
            PivotClause [31-60]
              PivotExpressionList [37-43]
                PivotExpression [37-43]
                  FunctionCall [37-43]
                    PathExpression [37-40]
                      Identifier(SUM) [37-40]
                    PathExpression [41-42]
                      Identifier(a) [41-42]
              PathExpression [48-49]
                Identifier(b) [48-49]
              PivotValueList [54-58]
                PivotValue [54-55]
                  IntLiteral(0) [54-55]
                PivotValue [57-58]
                  IntLiteral(1) [57-58]
          UsingClause [61-69]
            Identifier(x) [67-68]
--
SELECT
  *
FROM
  t1
  INNER JOIN
  t2 PIVOT(SUM(a) FOR b IN (0, 1))
  USING(x)
==

# PIVOT on join input (cross join)
SELECT * FROM t1 CROSS JOIN t2 PIVOT(SUM(a) FOR b IN (0, 1));
--
QueryStatement [0-60]
  Query [0-60]
    Select [0-60]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-60]
        Join(CROSS) [17-60]
          TablePathExpression [14-16]
            PathExpression [14-16]
              Identifier(t1) [14-16]
          TablePathExpression [28-60]
            PathExpression [28-30]
              Identifier(t2) [28-30]
            PivotClause [31-60]
              PivotExpressionList [37-43]
                PivotExpression [37-43]
                  FunctionCall [37-43]
                    PathExpression [37-40]
                      Identifier(SUM) [37-40]
                    PathExpression [41-42]
                      Identifier(a) [41-42]
              PathExpression [48-49]
                Identifier(b) [48-49]
              PivotValueList [54-58]
                PivotValue [54-55]
                  IntLiteral(0) [54-55]
                PivotValue [57-58]
                  IntLiteral(1) [57-58]
--
SELECT
  *
FROM
  t1
  CROSS JOIN
  t2 PIVOT(SUM(a) FOR b IN (0, 1))
==

# alias on the result of the entire PIVOT
SELECT * FROM t PIVOT(SUM(a) FOR b IN (0, 1)) AS t_pivot;
--
QueryStatement [0-56]
  Query [0-56]
    Select [0-56]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-56]
        TablePathExpression [14-56]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-56]
            PivotExpressionList [22-28]
              PivotExpression [22-28]
                FunctionCall [22-28]
                  PathExpression [22-25]
                    Identifier(SUM) [22-25]
                  PathExpression [26-27]
                    Identifier(a) [26-27]
            PathExpression [33-34]
              Identifier(b) [33-34]
            PivotValueList [39-43]
              PivotValue [39-40]
                IntLiteral(0) [39-40]
              PivotValue [42-43]
                IntLiteral(1) [42-43]
            Alias [46-56]
              Identifier(t_pivot) [49-56]
--
SELECT
  *
FROM
  t PIVOT(SUM(a) FOR b IN (0, 1)) AS t_pivot
==

# PIVOT on tvf result with zero args
SELECT * FROM MyTVF() PIVOT(SUM(a) FOR b IN (0, 1));
--
QueryStatement [0-51]
  Query [0-51]
    Select [0-51]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-51]
        TVF [14-51]
          PathExpression [14-19]
            Identifier(MyTVF) [14-19]
          PivotClause [22-51]
            PivotExpressionList [28-34]
              PivotExpression [28-34]
                FunctionCall [28-34]
                  PathExpression [28-31]
                    Identifier(SUM) [28-31]
                  PathExpression [32-33]
                    Identifier(a) [32-33]
            PathExpression [39-40]
              Identifier(b) [39-40]
            PivotValueList [45-49]
              PivotValue [45-46]
                IntLiteral(0) [45-46]
              PivotValue [48-49]
                IntLiteral(1) [48-49]
--
SELECT
  *
FROM
  MyTVF() PIVOT(SUM(a) FOR b IN (0, 1))
==

# PIVOT on tvf result with zero args and sample clause
SELECT * FROM MyTVF() PIVOT(SUM(a) FOR b IN (0, 1))  
  TABLESAMPLE RESERVOIR (100 ROWS) REPEATABLE(10);
--
QueryStatement [0-103]
  Query [0-103]
    Select [0-103]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-103]
        TVF [14-103]
          PathExpression [14-19]
            Identifier(MyTVF) [14-19]
          PivotClause [22-51]
            PivotExpressionList [28-34]
              PivotExpression [28-34]
                FunctionCall [28-34]
                  PathExpression [28-31]
                    Identifier(SUM) [28-31]
                  PathExpression [32-33]
                    Identifier(a) [32-33]
            PathExpression [39-40]
              Identifier(b) [39-40]
            PivotValueList [45-49]
              PivotValue [45-46]
                IntLiteral(0) [45-46]
              PivotValue [48-49]
                IntLiteral(1) [48-49]
          SampleClause [56-103]
            Identifier(RESERVOIR) [68-77]
            SampleSize [79-87]
              IntLiteral(100) [79-82]
            SampleSuffix [89-103]
              RepeatableClause [89-103]
                IntLiteral(10) [100-102]
--
SELECT
  *
FROM
  MyTVF() PIVOT(SUM(a) FOR b IN (0, 1)) TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
==

# PIVOT on tvf result with one arg
SELECT * FROM MyTVF(t) PIVOT(SUM(a) FOR b IN (0, 1));
--
QueryStatement [0-52]
  Query [0-52]
    Select [0-52]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-52]
        TVF [14-52]
          PathExpression [14-19]
            Identifier(MyTVF) [14-19]
          TVFArgument [20-21]
            PathExpression [20-21]
              Identifier(t) [20-21]
          PivotClause [23-52]
            PivotExpressionList [29-35]
              PivotExpression [29-35]
                FunctionCall [29-35]
                  PathExpression [29-32]
                    Identifier(SUM) [29-32]
                  PathExpression [33-34]
                    Identifier(a) [33-34]
            PathExpression [40-41]
              Identifier(b) [40-41]
            PivotValueList [46-50]
              PivotValue [46-47]
                IntLiteral(0) [46-47]
              PivotValue [49-50]
                IntLiteral(1) [49-50]
--
SELECT
  *
FROM
  MyTVF(t) PIVOT(SUM(a) FOR b IN (0, 1))
==

# PIVOT on tvf result with tablesample
SELECT * FROM MyTVF(t)
  PIVOT(SUM(a) FOR b IN (0, 1)) 
  TABLESAMPLE RESERVOIR (100 ROWS) REPEATABLE(10);
--

QueryStatement [0-105]
  Query [0-105]
    Select [0-105]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-105]
        TVF [14-105]
          PathExpression [14-19]
            Identifier(MyTVF) [14-19]
          TVFArgument [20-21]
            PathExpression [20-21]
              Identifier(t) [20-21]
          PivotClause [25-54]
            PivotExpressionList [31-37]
              PivotExpression [31-37]
                FunctionCall [31-37]
                  PathExpression [31-34]
                    Identifier(SUM) [31-34]
                  PathExpression [35-36]
                    Identifier(a) [35-36]
            PathExpression [42-43]
              Identifier(b) [42-43]
            PivotValueList [48-52]
              PivotValue [48-49]
                IntLiteral(0) [48-49]
              PivotValue [51-52]
                IntLiteral(1) [51-52]
          SampleClause [58-105]
            Identifier(RESERVOIR) [70-79]
            SampleSize [81-89]
              IntLiteral(100) [81-84]
            SampleSuffix [91-105]
              RepeatableClause [91-105]
                IntLiteral(10) [102-104]
--

SELECT
  *
FROM
  MyTVF(t) PIVOT(SUM(a) FOR b IN (0, 1)) TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
==

# PIVOT on tvf argument
SELECT * from MyTVF((SELECT * FROM t PIVOT(SUM(a) FOR b IN (0, 1))));
--
QueryStatement [0-68]
  Query [0-68]
    Select [0-68]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-68]
        TVF [14-68]
          PathExpression [14-19]
            Identifier(MyTVF) [14-19]
          TVFArgument [20-67]
            ExpressionSubquery [20-67]
              Query [21-66]
                Select [21-66]
                  SelectList [28-29]
                    SelectColumn [28-29]
                      Star(*) [28-29]
                  FromClause [30-66]
                    TablePathExpression [35-66]
                      PathExpression [35-36]
                        Identifier(t) [35-36]
                      PivotClause [37-66]
                        PivotExpressionList [43-49]
                          PivotExpression [43-49]
                            FunctionCall [43-49]
                              PathExpression [43-46]
                                Identifier(SUM) [43-46]
                              PathExpression [47-48]
                                Identifier(a) [47-48]
                        PathExpression [54-55]
                          Identifier(b) [54-55]
                        PivotValueList [60-64]
                          PivotValue [60-61]
                            IntLiteral(0) [60-61]
                          PivotValue [63-64]
                            IntLiteral(1) [63-64]
--
SELECT
  *
FROM
  MyTVF((
    SELECT
      *
    FROM
      t PIVOT(SUM(a) FOR b IN (0, 1))
  ))
==

# PIVOT on subquery
SELECT * FROM (SELECT a, b, c FROM t) PIVOT(SUM(a) FOR b IN (0, 1));
--
QueryStatement [0-67]
  Query [0-67]
    Select [0-67]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-67]
        TableSubquery [14-67]
          Query (pivot input) [15-36]
            Select [15-36]
              SelectList [22-29]
                SelectColumn [22-23]
                  PathExpression [22-23]
                    Identifier(a) [22-23]
                SelectColumn [25-26]
                  PathExpression [25-26]
                    Identifier(b) [25-26]
                SelectColumn [28-29]
                  PathExpression [28-29]
                    Identifier(c) [28-29]
              FromClause [30-36]
                TablePathExpression [35-36]
                  PathExpression [35-36]
                    Identifier(t) [35-36]
          PivotClause [38-67]
            PivotExpressionList [44-50]
              PivotExpression [44-50]
                FunctionCall [44-50]
                  PathExpression [44-47]
                    Identifier(SUM) [44-47]
                  PathExpression [48-49]
                    Identifier(a) [48-49]
            PathExpression [55-56]
              Identifier(b) [55-56]
            PivotValueList [61-65]
              PivotValue [61-62]
                IntLiteral(0) [61-62]
              PivotValue [64-65]
                IntLiteral(1) [64-65]
--
SELECT
  *
FROM
  (
    SELECT
      a,
      b,
      c
    FROM
      t
  ) PIVOT(SUM(a) FOR b IN (0, 1))
==

# PIVOT combined with other clauses
SELECT * FROM t PIVOT(SUM(a) AS sum FOR b IN (0 AS zero, 1))
WHERE a < 5 HAVING sum_zero = 1 LIMIT 10;
--
QueryStatement [0-101]
  Query [0-101]
    Select [0-92]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-60]
        TablePathExpression [14-60]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-60]
            PivotExpressionList [22-35]
              PivotExpression [22-35]
                FunctionCall [22-28]
                  PathExpression [22-25]
                    Identifier(SUM) [22-25]
                  PathExpression [26-27]
                    Identifier(a) [26-27]
                Alias [29-35]
                  Identifier(sum) [32-35]
            PathExpression [40-41]
              Identifier(b) [40-41]
            PivotValueList [46-58]
              PivotValue [46-55]
                IntLiteral(0) [46-47]
                Alias [48-55]
                  Identifier(zero) [51-55]
              PivotValue [57-58]
                IntLiteral(1) [57-58]
      WhereClause [61-72]
        BinaryExpression(<) [67-72]
          PathExpression [67-68]
            Identifier(a) [67-68]
          IntLiteral(5) [71-72]
      Having [73-92]
        BinaryExpression(=) [80-92]
          PathExpression [80-88]
            Identifier(sum_zero) [80-88]
          IntLiteral(1) [91-92]
    LimitOffset [93-101]
      IntLiteral(10) [99-101]
--
SELECT
  *
FROM
  t PIVOT(SUM(a) AS sum FOR b IN (0 AS zero, 1))
WHERE
  a < 5
HAVING sum_zero = 1
LIMIT 10
==

# PIVOT combined with TABLESAMPLE
SELECT * FROM
t PIVOT(SUM(a) AS sum FOR b IN (0 AS zero, 1)) {{AS t_pivot|}}
TABLESAMPLE RESERVOIR (100 ROWS) REPEATABLE(10)
--
ALTERNATION GROUP: AS t_pivot
--
QueryStatement [0-119]
  Query [0-119]
    Select [0-119]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-119]
        TablePathExpression [14-119]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-71]
            PivotExpressionList [22-35]
              PivotExpression [22-35]
                FunctionCall [22-28]
                  PathExpression [22-25]
                    Identifier(SUM) [22-25]
                  PathExpression [26-27]
                    Identifier(a) [26-27]
                Alias [29-35]
                  Identifier(sum) [32-35]
            PathExpression [40-41]
              Identifier(b) [40-41]
            PivotValueList [46-58]
              PivotValue [46-55]
                IntLiteral(0) [46-47]
                Alias [48-55]
                  Identifier(zero) [51-55]
              PivotValue [57-58]
                IntLiteral(1) [57-58]
            Alias [61-71]
              Identifier(t_pivot) [64-71]
          SampleClause [72-119]
            Identifier(RESERVOIR) [84-93]
            SampleSize [95-103]
              IntLiteral(100) [95-98]
            SampleSuffix [105-119]
              RepeatableClause [105-119]
                IntLiteral(10) [116-118]
--
SELECT
  *
FROM
  t PIVOT(SUM(a) AS sum FOR b IN (0 AS zero, 1)) AS t_pivot TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-109]
  Query [0-109]
    Select [0-109]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-109]
        TablePathExpression [14-109]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-60]
            PivotExpressionList [22-35]
              PivotExpression [22-35]
                FunctionCall [22-28]
                  PathExpression [22-25]
                    Identifier(SUM) [22-25]
                  PathExpression [26-27]
                    Identifier(a) [26-27]
                Alias [29-35]
                  Identifier(sum) [32-35]
            PathExpression [40-41]
              Identifier(b) [40-41]
            PivotValueList [46-58]
              PivotValue [46-55]
                IntLiteral(0) [46-47]
                Alias [48-55]
                  Identifier(zero) [51-55]
              PivotValue [57-58]
                IntLiteral(1) [57-58]
          SampleClause [62-109]
            Identifier(RESERVOIR) [74-83]
            SampleSize [85-93]
              IntLiteral(100) [85-88]
            SampleSuffix [95-109]
              RepeatableClause [95-109]
                IntLiteral(10) [106-108]
--
SELECT
  *
FROM
  t PIVOT(SUM(a) AS sum FOR b IN (0 AS zero, 1)) TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
==

# PIVOT combined with TABLESAMPLE and alias
SELECT * FROM
t PIVOT(SUM(a) AS sum FOR b IN (0 AS zero, 1))
AS t_pivot TABLESAMPLE RESERVOIR (100 ROWS) REPEATABLE(10)
--
QueryStatement [0-119]
  Query [0-119]
    Select [0-119]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-119]
        TablePathExpression [14-119]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-71]
            PivotExpressionList [22-35]
              PivotExpression [22-35]
                FunctionCall [22-28]
                  PathExpression [22-25]
                    Identifier(SUM) [22-25]
                  PathExpression [26-27]
                    Identifier(a) [26-27]
                Alias [29-35]
                  Identifier(sum) [32-35]
            PathExpression [40-41]
              Identifier(b) [40-41]
            PivotValueList [46-58]
              PivotValue [46-55]
                IntLiteral(0) [46-47]
                Alias [48-55]
                  Identifier(zero) [51-55]
              PivotValue [57-58]
                IntLiteral(1) [57-58]
            Alias [61-71]
              Identifier(t_pivot) [64-71]
          SampleClause [72-119]
            Identifier(RESERVOIR) [84-93]
            SampleSize [95-103]
              IntLiteral(100) [95-98]
            SampleSuffix [105-119]
              RepeatableClause [105-119]
                IntLiteral(10) [116-118]
--
SELECT
  *
FROM
  t PIVOT(SUM(a) AS sum FOR b IN (0 AS zero, 1)) AS t_pivot TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
==

# PIVOT on time-travel table
SELECT * FROM
(SELECT * FROM t FOR SYSTEM TIME AS OF '2018-01-01')
PIVOT(SUM(a) AS sum FOR b IN (0 AS zero, 1))
--
QueryStatement [0-111]
  Query [0-111]
    Select [0-111]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-111]
        TableSubquery [14-111]
          Query (pivot input) [15-65]
            Select [15-65]
              SelectList [22-23]
                SelectColumn [22-23]
                  Star(*) [22-23]
              FromClause [24-65]
                TablePathExpression [29-65]
                  PathExpression [29-30]
                    Identifier(t) [29-30]
                  ForSystemTime [31-65]
                    StringLiteral('2018-01-01') [53-65]
          PivotClause [67-111]
            PivotExpressionList [73-86]
              PivotExpression [73-86]
                FunctionCall [73-79]
                  PathExpression [73-76]
                    Identifier(SUM) [73-76]
                  PathExpression [77-78]
                    Identifier(a) [77-78]
                Alias [80-86]
                  Identifier(sum) [83-86]
            PathExpression [91-92]
              Identifier(b) [91-92]
            PivotValueList [97-109]
              PivotValue [97-106]
                IntLiteral(0) [97-98]
                Alias [99-106]
                  Identifier(zero) [102-106]
              PivotValue [108-109]
                IntLiteral(1) [108-109]
--
SELECT
  *
FROM
  (
    SELECT
      *
    FROM
      t FOR SYSTEM_TIME AS OF '2018-01-01'
  ) PIVOT(SUM(a) AS sum FOR b IN (0 AS zero, 1))
==

# time-travel on pivot result
SELECT * FROM
t
PIVOT(SUM(a) AS sum FOR b IN (0 AS zero, 1))
FOR SYSTEM TIME AS OF '2018-01-01';
--
ERROR: Syntax error: PIVOT and FOR SYSTEM TIME AS OF may not be combined [at 4:1]
FOR SYSTEM TIME AS OF '2018-01-01';
^
==

# Table alias named "PIVOT" - OK because PIVOT is a non-reserved keyword.
SELECT * FROM t PIVOT;
--
QueryStatement [0-21]
  Query [0-21]
    Select [0-21]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-21]
        TablePathExpression [14-21]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [16-21]
            Identifier(PIVOT) [16-21]
--
SELECT
  *
FROM
  t AS PIVOT
==

# ERROR: Pivot clause containing only parens
SELECT * FROM t PIVOT();
--
ERROR: Syntax error: Unexpected ")" [at 1:23]
SELECT * FROM t PIVOT();
                      ^
==

# ERROR: Pivot clause with only pivot expr
SELECT * FROM t PIVOT(x);
--
ERROR: Syntax error: Unexpected ")" [at 1:24]
SELECT * FROM t PIVOT(x);
                       ^
==

# ERROR: Pivot clause with only pivot expr and FOR expr
SELECT * FROM t PIVOT(x FOR y);
--
ERROR: Syntax error: Unexpected ")" [at 1:30]
SELECT * FROM t PIVOT(x FOR y);
                             ^
==

# ERROR: Empty IN-list
SELECT * FROM t PIVOT(x FOR y IN ());
--
ERROR: Syntax error: Unexpected ")" [at 1:35]
SELECT * FROM t PIVOT(x FOR y IN ());
                                  ^
==

# ERROR: Trailing comma in IN-list
SELECT * FROM t PIVOT(x FOR y IN (0,));
--
ERROR: Syntax error: Unexpected ")" [at 1:37]
SELECT * FROM t PIVOT(x FOR y IN (0,));
                                    ^
==

# ERROR: Missing right-parenthesis
SELECT * FROM t PIVOT(x FOR y IN (0);
--
ERROR: Syntax error: Expected ")" but got ";" [at 1:37]
SELECT * FROM t PIVOT(x FOR y IN (0);
                                    ^
==

# ERROR: Missing pivot expression
SELECT * FROM t PIVOT(FOR y IN (0));
--
ERROR: Syntax error: Unexpected keyword FOR [at 1:23]
SELECT * FROM t PIVOT(FOR y IN (0));
                      ^
==

# ERROR: Trailing comma after last pivot expression
SELECT * FROM t PIVOT(SUM(x), SUM(y), FOR y IN (0));
--
ERROR: Syntax error: Unexpected keyword FOR [at 1:39]
SELECT * FROM t PIVOT(SUM(x), SUM(y), FOR y IN (0));
                                      ^
==

# PIVOT as identifier outside of table context
SELECT PIVOT;
--
QueryStatement [0-12]
  Query [0-12]
    Select [0-12]
      SelectList [7-12]
        SelectColumn [7-12]
          PathExpression [7-12]
            Identifier(PIVOT) [7-12]
--
SELECT
  PIVOT
==

# PIVOT AS alias using AS keyword
SELECT * FROM t AS PIVOT;
--
QueryStatement [0-24]
  Query [0-24]
    Select [0-24]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-24]
        TablePathExpression [14-24]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [16-24]
            Identifier(PIVOT) [19-24]
--
SELECT
  *
FROM
  t AS PIVOT
==

# PIVOT AS alias of table produced by a PIVOT clause.
SELECT * FROM t PIVOT(a FOR b IN (c)) PIVOT;
--
QueryStatement [0-43]
  Query [0-43]
    Select [0-43]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-43]
        TablePathExpression [14-43]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-43]
            PivotExpressionList [22-23]
              PivotExpression [22-23]
                PathExpression [22-23]
                  Identifier(a) [22-23]
            PathExpression [28-29]
              Identifier(b) [28-29]
            PivotValueList [34-35]
              PivotValue [34-35]
                PathExpression [34-35]
                  Identifier(c) [34-35]
            Alias [38-43]
              Identifier(PIVOT) [38-43]
--
SELECT
  *
FROM
  t PIVOT(a FOR b IN (c)) AS PIVOT
==

# TVF named "PIVOT".
SELECT * FROM PIVOT(t);
--
QueryStatement [0-22]
  Query [0-22]
    Select [0-22]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-22]
        TVF [14-22]
          PathExpression [14-19]
            Identifier(PIVOT) [14-19]
          TVFArgument [20-21]
            PathExpression [20-21]
              Identifier(t) [20-21]
--
SELECT
  *
FROM
  PIVOT(t)
==

# PIVOT with empty IN-list
SELECT * FROM t PIVOT(SUM(a) FOR b IN ());
--
ERROR: Syntax error: Unexpected ")" [at 1:40]
SELECT * FROM t PIVOT(SUM(a) FOR b IN ());
                                       ^
==

# PIVOT combined with TABLESAMPLE and alias (without AS keyword)
SELECT * FROM
t PIVOT(SUM(a) AS sum FOR b IN (0 AS zero, 1))
t_pivot TABLESAMPLE RESERVOIR (100 ROWS) REPEATABLE(10)
--
QueryStatement [0-116]
  Query [0-116]
    Select [0-116]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-116]
        TablePathExpression [14-116]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-68]
            PivotExpressionList [22-35]
              PivotExpression [22-35]
                FunctionCall [22-28]
                  PathExpression [22-25]
                    Identifier(SUM) [22-25]
                  PathExpression [26-27]
                    Identifier(a) [26-27]
                Alias [29-35]
                  Identifier(sum) [32-35]
            PathExpression [40-41]
              Identifier(b) [40-41]
            PivotValueList [46-58]
              PivotValue [46-55]
                IntLiteral(0) [46-47]
                Alias [48-55]
                  Identifier(zero) [51-55]
              PivotValue [57-58]
                IntLiteral(1) [57-58]
            Alias [61-68]
              Identifier(t_pivot) [61-68]
          SampleClause [69-116]
            Identifier(RESERVOIR) [81-90]
            SampleSize [92-100]
              IntLiteral(100) [92-95]
            SampleSuffix [102-116]
              RepeatableClause [102-116]
                IntLiteral(10) [113-115]
--
SELECT
  *
FROM
  t PIVOT(SUM(a) AS sum FOR b IN (0 AS zero, 1)) AS t_pivot TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
==

# Complex pivot value exprs
SELECT * FROM t PIVOT(SUM(a) FOR b IN (1+2+3, 4+5+6));
--
QueryStatement [0-53]
  Query [0-53]
    Select [0-53]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-53]
        TablePathExpression [14-53]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-53]
            PivotExpressionList [22-28]
              PivotExpression [22-28]
                FunctionCall [22-28]
                  PathExpression [22-25]
                    Identifier(SUM) [22-25]
                  PathExpression [26-27]
                    Identifier(a) [26-27]
            PathExpression [33-34]
              Identifier(b) [33-34]
            PivotValueList [39-51]
              PivotValue [39-44]
                BinaryExpression(+) [39-44]
                  BinaryExpression(+) [39-42]
                    IntLiteral(1) [39-40]
                    IntLiteral(2) [41-42]
                  IntLiteral(3) [43-44]
              PivotValue [46-51]
                BinaryExpression(+) [46-51]
                  BinaryExpression(+) [46-49]
                    IntLiteral(4) [46-47]
                    IntLiteral(5) [48-49]
                  IntLiteral(6) [50-51]
--
SELECT
  *
FROM
  t PIVOT(SUM(a) FOR b IN (1 + 2 + 3, 4 + 5 + 6))
==

# ERROR: Multiple pivot modifiers on the same table
SELECT * FROM t
PIVOT(SUM(a) FOR b IN (1, 2))
PIVOT(SUM(a) FOR b IN (3, 4));
--
ERROR: Syntax error: Expected end of input but got "(" [at 3:6]
PIVOT(SUM(a) FOR b IN (3, 4));
     ^
==

# ERROR: Trailing comma after IN list
SELECT * FROM t
PIVOT(SUM(a) FOR b IN (1, 2,))
--
ERROR: Syntax error: Unexpected ")" [at 2:29]
PIVOT(SUM(a) FOR b IN (1, 2,))
                            ^
==

# ERROR: Trailing comma after pivot expr list
SELECT * FROM t
PIVOT(SUM(a), AVG(a), FOR b IN (1, 2,))
--
ERROR: Syntax error: Unexpected keyword FOR [at 2:23]
PIVOT(SUM(a), AVG(a), FOR b IN (1, 2,))
                      ^
==

# The SQL Standard allows a parenthesized column list to follow a table alias.
# ZetaSQL does not support this, but make sure that, when the table alias is
# "PIVOT", the query fails.
SELECT * FROM t PIVOT({{x|x,|x,y|x,y,}});
--
ALTERNATION GROUP: x
--
ERROR: Syntax error: Unexpected ")" [at 1:24]
SELECT * FROM t PIVOT(x);
                       ^
--
ALTERNATION GROUP: x,
--
ERROR: Syntax error: Unexpected ")" [at 1:25]
SELECT * FROM t PIVOT(x,);
                        ^
--
ALTERNATION GROUP: x,y
--
ERROR: Syntax error: Unexpected ")" [at 1:26]
SELECT * FROM t PIVOT(x,y);
                         ^
--
ALTERNATION GROUP: x,y,
--
ERROR: Syntax error: Unexpected ")" [at 1:27]
SELECT * FROM t PIVOT(x,y,);
                          ^
==

# WITH OFFSET on pivot result (with and without alias)
SELECT * FROM
t
PIVOT(SUM(a) AS sum FOR b IN (0 AS zero, 1)) {{AS t_alias|t_alias|}}
WITH OFFSET {{AS t_alias|t_alias|}};
--
ALTERNATION GROUPS:
    AS t_alias,AS t_alias
    t_alias,AS t_alias
    AS t_alias
--
ERROR: PIVOT and WITH OFFSET cannot be combined [at 4:1]
WITH OFFSET AS t_alias;
^
--
ALTERNATION GROUPS:
    AS t_alias,t_alias
    t_alias,t_alias
    t_alias
--
ERROR: PIVOT and WITH OFFSET cannot be combined [at 4:1]
WITH OFFSET t_alias;
^
--
ALTERNATION GROUPS:
    AS t_alias,
    t_alias,
    <empty>
--
ERROR: PIVOT and WITH OFFSET cannot be combined [at 4:1]
WITH OFFSET ;
^
==

# Alias on input table of PIVOT, both with and without AS keyword.
SELECT * FROM t {{AS|}} t1 PIVOT(a FOR b IN (c));
--
ALTERNATION GROUP: AS
--
QueryStatement [0-43]
  Query [0-43]
    Select [0-43]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-43]
        TablePathExpression [14-43]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [16-21]
            Identifier(t1) [19-21]
          PivotClause [22-43]
            PivotExpressionList [28-29]
              PivotExpression [28-29]
                PathExpression [28-29]
                  Identifier(a) [28-29]
            PathExpression [34-35]
              Identifier(b) [34-35]
            PivotValueList [40-41]
              PivotValue [40-41]
                PathExpression [40-41]
                  Identifier(c) [40-41]
--
SELECT
  *
FROM
  t AS t1 PIVOT(a FOR b IN (c))
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-41]
  Query [0-41]
    Select [0-41]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-41]
        TablePathExpression [14-41]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [17-19]
            Identifier(t1) [17-19]
          PivotClause [20-41]
            PivotExpressionList [26-27]
              PivotExpression [26-27]
                PathExpression [26-27]
                  Identifier(a) [26-27]
            PathExpression [32-33]
              Identifier(b) [32-33]
            PivotValueList [38-39]
              PivotValue [38-39]
                PathExpression [38-39]
                  Identifier(c) [38-39]
--
SELECT
  *
FROM
  t AS t1 PIVOT(a FOR b IN (c))
==

# Alias on both input table and result of PIVOT,
# both with and without AS keyword.
SELECT * FROM t {{AS|}} t1 PIVOT(a FOR b IN (c)) {{AS|}} t2;
--
ALTERNATION GROUP: AS,AS
--
QueryStatement [0-49]
  Query [0-49]
    Select [0-49]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-49]
        TablePathExpression [14-49]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [16-21]
            Identifier(t1) [19-21]
          PivotClause [22-49]
            PivotExpressionList [28-29]
              PivotExpression [28-29]
                PathExpression [28-29]
                  Identifier(a) [28-29]
            PathExpression [34-35]
              Identifier(b) [34-35]
            PivotValueList [40-41]
              PivotValue [40-41]
                PathExpression [40-41]
                  Identifier(c) [40-41]
            Alias [44-49]
              Identifier(t2) [47-49]
--
SELECT
  *
FROM
  t AS t1 PIVOT(a FOR b IN (c)) AS t2
--
ALTERNATION GROUP: AS,
--
QueryStatement [0-47]
  Query [0-47]
    Select [0-47]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-47]
        TablePathExpression [14-47]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [16-21]
            Identifier(t1) [19-21]
          PivotClause [22-47]
            PivotExpressionList [28-29]
              PivotExpression [28-29]
                PathExpression [28-29]
                  Identifier(a) [28-29]
            PathExpression [34-35]
              Identifier(b) [34-35]
            PivotValueList [40-41]
              PivotValue [40-41]
                PathExpression [40-41]
                  Identifier(c) [40-41]
            Alias [45-47]
              Identifier(t2) [45-47]
--
SELECT
  *
FROM
  t AS t1 PIVOT(a FOR b IN (c)) AS t2
--
ALTERNATION GROUP: AS
--
QueryStatement [0-47]
  Query [0-47]
    Select [0-47]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-47]
        TablePathExpression [14-47]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [17-19]
            Identifier(t1) [17-19]
          PivotClause [20-47]
            PivotExpressionList [26-27]
              PivotExpression [26-27]
                PathExpression [26-27]
                  Identifier(a) [26-27]
            PathExpression [32-33]
              Identifier(b) [32-33]
            PivotValueList [38-39]
              PivotValue [38-39]
                PathExpression [38-39]
                  Identifier(c) [38-39]
            Alias [42-47]
              Identifier(t2) [45-47]
--
SELECT
  *
FROM
  t AS t1 PIVOT(a FOR b IN (c)) AS t2
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-45]
  Query [0-45]
    Select [0-45]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-45]
        TablePathExpression [14-45]
          PathExpression [14-15]
            Identifier(t) [14-15]
          Alias [17-19]
            Identifier(t1) [17-19]
          PivotClause [20-45]
            PivotExpressionList [26-27]
              PivotExpression [26-27]
                PathExpression [26-27]
                  Identifier(a) [26-27]
            PathExpression [32-33]
              Identifier(b) [32-33]
            PivotValueList [38-39]
              PivotValue [38-39]
                PathExpression [38-39]
                  Identifier(c) [38-39]
            Alias [43-45]
              Identifier(t2) [43-45]
--
SELECT
  *
FROM
  t AS t1 PIVOT(a FOR b IN (c)) AS t2
==

# PIVOT on UNNEST() is an error on the resolver (because unnest() returns
# a value table), but it's allowed on the parser layer.
# Test both with and without a WITH OFFSET clause.
SELECT * FROM UNNEST([1, 2, 3]) {{WITH OFFSET|WITH OFFSET x|WITH OFFSET AS x|}}
PIVOT(SUM(x) FOR x IN (4, 5)) AS x;
--
ALTERNATION GROUP: WITH OFFSET
--
ERROR: Syntax error: Expected end of input but got "(" [at 2:6]
PIVOT(SUM(x) FOR x IN (4, 5)) AS x;
     ^
--
ALTERNATION GROUPS:
    WITH OFFSET x
    WITH OFFSET AS x
--
ERROR: Syntax error: Expected end of input but got keyword PIVOT [at 2:1]
PIVOT(SUM(x) FOR x IN (4, 5)) AS x;
^
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-67]
  Query [0-67]
    Select [0-67]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-67]
        TablePathExpression [14-67]
          UnnestExpression [14-31]
            ArrayConstructor [21-30]
              IntLiteral(1) [22-23]
              IntLiteral(2) [25-26]
              IntLiteral(3) [28-29]
          PivotClause [33-67]
            PivotExpressionList [39-45]
              PivotExpression [39-45]
                FunctionCall [39-45]
                  PathExpression [39-42]
                    Identifier(SUM) [39-42]
                  PathExpression [43-44]
                    Identifier(x) [43-44]
            PathExpression [50-51]
              Identifier(x) [50-51]
            PivotValueList [56-60]
              PivotValue [56-57]
                IntLiteral(4) [56-57]
              PivotValue [59-60]
                IntLiteral(5) [59-60]
            Alias [63-67]
              Identifier(x) [66-67]
--
SELECT
  *
FROM
  UNNEST(ARRAY[1, 2, 3]) PIVOT(SUM(x) FOR x IN (4, 5)) AS x
==

# ERROR: qualified alias for pivot input
SELECT * FROM t p.d.t1 PIVOT(a FOR b IN (c)) {{AS|}} t2;
--
ALTERNATION GROUP: AS
--
ERROR: Syntax error: Expected end of input but got "." [at 1:18]
SELECT * FROM t p.d.t1 PIVOT(a FOR b IN (c)) AS t2;
                 ^
--
ALTERNATION GROUP: <empty>
--
ERROR: Syntax error: Expected end of input but got "." [at 1:18]
SELECT * FROM t p.d.t1 PIVOT(a FOR b IN (c))  t2;
                 ^
==

# ERROR: qualified alias for pivot output
SELECT * FROM t t1 PIVOT(a FOR b IN (c)) {{AS|}} p.d.t2;
--
ALTERNATION GROUP: AS
--
ERROR: Syntax error: Expected end of input but got "." [at 1:46]
SELECT * FROM t t1 PIVOT(a FOR b IN (c)) AS p.d.t2;
                                             ^
--
ALTERNATION GROUP: <empty>
--
ERROR: Syntax error: Expected end of input but got "." [at 1:44]
SELECT * FROM t t1 PIVOT(a FOR b IN (c))  p.d.t2;
                                           ^
==

# Qualified references to column from input table within pivot clause
SELECT * FROM t PIVOT(t.a FOR t.b IN (c)) {{AS|}} t2;
--
ALTERNATION GROUP: AS
--
QueryStatement [0-47]
  Query [0-47]
    Select [0-47]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-47]
        TablePathExpression [14-47]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-47]
            PivotExpressionList [22-25]
              PivotExpression [22-25]
                PathExpression [22-25]
                  Identifier(t) [22-23]
                  Identifier(a) [24-25]
            PathExpression [30-33]
              Identifier(t) [30-31]
              Identifier(b) [32-33]
            PivotValueList [38-39]
              PivotValue [38-39]
                PathExpression [38-39]
                  Identifier(c) [38-39]
            Alias [42-47]
              Identifier(t2) [45-47]
--
SELECT
  *
FROM
  t PIVOT(t.a FOR t.b IN (c)) AS t2
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-45]
  Query [0-45]
    Select [0-45]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-45]
        TablePathExpression [14-45]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-45]
            PivotExpressionList [22-25]
              PivotExpression [22-25]
                PathExpression [22-25]
                  Identifier(t) [22-23]
                  Identifier(a) [24-25]
            PathExpression [30-33]
              Identifier(t) [30-31]
              Identifier(b) [32-33]
            PivotValueList [38-39]
              PivotValue [38-39]
                PathExpression [38-39]
                  Identifier(c) [38-39]
            Alias [43-45]
              Identifier(t2) [43-45]
--
SELECT
  *
FROM
  t PIVOT(t.a FOR t.b IN (c)) AS t2
==

# FOR expr with its own IN clause (no parentheses)
SELECT * FROM t
PIVOT(SUM(x) FOR y IN (1, 2) IN (TRUE, FALSE));
--
ERROR: Syntax error: Expected ")" but got keyword IN [at 2:30]
PIVOT(SUM(x) FOR y IN (1, 2) IN (TRUE, FALSE));
                             ^
==

# FOR expr with its own IN clause (with parentheses)
SELECT * FROM t
PIVOT(SUM(x) FOR (y IN (1, 2)) IN (TRUE, FALSE));
--
QueryStatement [0-64]
  Query [0-64]
    Select [0-64]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-64]
        TablePathExpression [14-64]
          PathExpression [14-15]
            Identifier(t) [14-15]
          PivotClause [16-64]
            PivotExpressionList [22-28]
              PivotExpression [22-28]
                FunctionCall [22-28]
                  PathExpression [22-25]
                    Identifier(SUM) [22-25]
                  PathExpression [26-27]
                    Identifier(x) [26-27]
            InExpression(IN) [34-45]
              PathExpression [34-35]
                Identifier(y) [34-35]
              Location [36-38]
              InList [40-44]
                IntLiteral(1) [40-41]
                IntLiteral(2) [43-44]
            PivotValueList [51-62]
              PivotValue [51-55]
                BooleanLiteral(TRUE) [51-55]
              PivotValue [57-62]
                BooleanLiteral(FALSE) [57-62]
--
SELECT
  *
FROM
  t PIVOT(SUM(x) FOR(y IN (1, 2)) IN (TRUE, FALSE))
==

# Subqueries nested inside pivot input are not marked as pivot input.
SELECT * FROM (SELECT * FROM (SELECT * FROM t)) PIVOT (SUM(x) FOR y IN (1, 2));
--
QueryStatement [0-78]
  Query [0-78]
    Select [0-78]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-78]
        TableSubquery [14-78]
          Query (pivot input) [15-46]
            Select [15-46]
              SelectList [22-23]
                SelectColumn [22-23]
                  Star(*) [22-23]
              FromClause [24-46]
                TableSubquery [29-46]
                  Query [30-45]
                    Select [30-45]
                      SelectList [37-38]
                        SelectColumn [37-38]
                          Star(*) [37-38]
                      FromClause [39-45]
                        TablePathExpression [44-45]
                          PathExpression [44-45]
                            Identifier(t) [44-45]
          PivotClause [48-78]
            PivotExpressionList [55-61]
              PivotExpression [55-61]
                FunctionCall [55-61]
                  PathExpression [55-58]
                    Identifier(SUM) [55-58]
                  PathExpression [59-60]
                    Identifier(x) [59-60]
            PathExpression [66-67]
              Identifier(y) [66-67]
            PivotValueList [72-76]
              PivotValue [72-73]
                IntLiteral(1) [72-73]
              PivotValue [75-76]
                IntLiteral(2) [75-76]
--
SELECT
  *
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          *
        FROM
          t
      )
  ) PIVOT(SUM(x) FOR y IN (1, 2))
==

# When a pivot input query uses a WITH clause, the main query is still marked as
# pivot input (but the with entry subqueries are not)
SELECT * FROM (
  WITH tt AS (SELECT 1 FROM t)
  SELECT * FROM tt)
  PIVOT (SUM(x) FOR y IN (1, 2));
--
QueryStatement [0-99]
  Query [0-99]
    Select [0-99]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-99]
        TableSubquery [14-99]
          Query (pivot input) [18-65]
            WithClause [18-46]
              WithClauseEntry [23-46]
                Identifier(tt) [23-25]
                Query [30-45]
                  Select [30-45]
                    SelectList [37-38]
                      SelectColumn [37-38]
                        IntLiteral(1) [37-38]
                    FromClause [39-45]
                      TablePathExpression [44-45]
                        PathExpression [44-45]
                          Identifier(t) [44-45]
            Select [49-65]
              SelectList [56-57]
                SelectColumn [56-57]
                  Star(*) [56-57]
              FromClause [58-65]
                TablePathExpression [63-65]
                  PathExpression [63-65]
                    Identifier(tt) [63-65]
          PivotClause [69-99]
            PivotExpressionList [76-82]
              PivotExpression [76-82]
                FunctionCall [76-82]
                  PathExpression [76-79]
                    Identifier(SUM) [76-79]
                  PathExpression [80-81]
                    Identifier(x) [80-81]
            PathExpression [87-88]
              Identifier(y) [87-88]
            PivotValueList [93-97]
              PivotValue [93-94]
                IntLiteral(1) [93-94]
              PivotValue [96-97]
                IntLiteral(2) [96-97]
--
SELECT
  *
FROM
  (WITH
      tt AS (
        SELECT
          1
        FROM
          t
      )
    SELECT
      *
    FROM
      tt
  ) PIVOT(SUM(x) FOR y IN (1, 2))
==

# Inputs to a set operation used as pivot input are not marked as pivot input
SELECT * FROM (
  SELECT a, b FROM t1
  UNION ALL (SELECT c, d FROM t2)
) PIVOT (SUM(x) FOR y IN (1, 2));
--
QueryStatement [0-104]
  Query [0-104]
    Select [0-104]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-104]
        TableSubquery [14-104]
          Query (pivot input) [18-71]
            SetOperation(UNION ALL) [18-71]
              Select [18-37]
                SelectList [25-29]
                  SelectColumn [25-26]
                    PathExpression [25-26]
                      Identifier(a) [25-26]
                  SelectColumn [28-29]
                    PathExpression [28-29]
                      Identifier(b) [28-29]
                FromClause [30-37]
                  TablePathExpression [35-37]
                    PathExpression [35-37]
                      Identifier(t1) [35-37]
              Query [51-70]
                Select [51-70]
                  SelectList [58-62]
                    SelectColumn [58-59]
                      PathExpression [58-59]
                        Identifier(c) [58-59]
                    SelectColumn [61-62]
                      PathExpression [61-62]
                        Identifier(d) [61-62]
                  FromClause [63-70]
                    TablePathExpression [68-70]
                      PathExpression [68-70]
                        Identifier(t2) [68-70]
          PivotClause [74-104]
            PivotExpressionList [81-87]
              PivotExpression [81-87]
                FunctionCall [81-87]
                  PathExpression [81-84]
                    Identifier(SUM) [81-84]
                  PathExpression [85-86]
                    Identifier(x) [85-86]
            PathExpression [92-93]
              Identifier(y) [92-93]
            PivotValueList [98-102]
              PivotValue [98-99]
                IntLiteral(1) [98-99]
              PivotValue [101-102]
                IntLiteral(2) [101-102]
--
SELECT
  *
FROM
  (
    SELECT
      a,
      b
    FROM
      t1
    UNION ALL(
    SELECT
      c,
      d
    FROM
      t2
    )
  ) PIVOT(SUM(x) FOR y IN (1, 2))
==

# Inputs to a join operation used as pivot input are not marked as pivot input
SELECT * FROM (
  SELECT a, b FROM t1
  INNER JOIN (SELECT c, d FROM t2) ON (a = c)
) PIVOT (SUM(x) FOR y IN (1, 2));
--
QueryStatement [0-116]
  Query [0-116]
    Select [0-116]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-116]
        TableSubquery [14-116]
          Query (pivot input) [18-83]
            Select [18-83]
              SelectList [25-29]
                SelectColumn [25-26]
                  PathExpression [25-26]
                    Identifier(a) [25-26]
                SelectColumn [28-29]
                  PathExpression [28-29]
                    Identifier(b) [28-29]
              FromClause [30-83]
                Join(INNER) [40-83]
                  TablePathExpression [35-37]
                    PathExpression [35-37]
                      Identifier(t1) [35-37]
                  TableSubquery [51-72]
                    Query [52-71]
                      Select [52-71]
                        SelectList [59-63]
                          SelectColumn [59-60]
                            PathExpression [59-60]
                              Identifier(c) [59-60]
                          SelectColumn [62-63]
                            PathExpression [62-63]
                              Identifier(d) [62-63]
                        FromClause [64-71]
                          TablePathExpression [69-71]
                            PathExpression [69-71]
                              Identifier(t2) [69-71]
                  OnClause [73-83]
                    BinaryExpression(=) [77-82]
                      PathExpression [77-78]
                        Identifier(a) [77-78]
                      PathExpression [81-82]
                        Identifier(c) [81-82]
          PivotClause [86-116]
            PivotExpressionList [93-99]
              PivotExpression [93-99]
                FunctionCall [93-99]
                  PathExpression [93-96]
                    Identifier(SUM) [93-96]
                  PathExpression [97-98]
                    Identifier(x) [97-98]
            PathExpression [104-105]
              Identifier(y) [104-105]
            PivotValueList [110-114]
              PivotValue [110-111]
                IntLiteral(1) [110-111]
              PivotValue [113-114]
                IntLiteral(2) [113-114]
--
SELECT
  *
FROM
  (
    SELECT
      a,
      b
    FROM
      t1
      INNER JOIN
      (
        SELECT
          c,
          d
        FROM
          t2
      )
      ON (a = c)
  ) PIVOT(SUM(x) FOR y IN (1, 2))
